--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,25 @@
     top:0px;
     left:0px;
 }
-#tituloindex{
+#titulo{
     padding:20px;
     text-align: center;
 }
+.navbar-brand{
+    background-color:red;
+}
 .container{
+    background-color:white;
     margin-top:20px;
     border-left: 20px;
+    border-radius: 5px;
 }
-#footer{
+footer{
     text-align:center;
     padding:20px;
+    color:white;
+}
+body{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: rgb(87, 154, 216);
 }
