--- a/styles.css
+++ b/styles.css
@@ -20,13 +20,14 @@ footer{
     color:white;
     background-color:rgb(76, 107, 136);
 }
+#inputDesc{
+    padding-bottom: 150px;
+}
 #IdInfo{
     padding:40px;
 }
 #IdPerfil{
     border-radius:20px;
-    width:400px;
-    height:400px;
 }
 body{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
