--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
     border-radius: 20px;
 }
 footer{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align:center;
     padding:40px;
     color:white;
